--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 # Created by https://www.gitignore.io/api/eclipse
 # Edit at https://www.gitignore.io/?templates=eclipse
 
+### jscode ###
+.prettierrc
+
 ### Eclipse ###
 .metadata
 bin/
